--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Groovy support bot",
   "main": "main.js",
   "scripts": {
-    "test": "node main.js debug"
+    "test": "node main.js debug",
+    "start": "node main.js"
   },
   "repository": {
     "type": "git",
